cmake_minimum_required(VERSION 3.25)
project(Serial LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


set(LIBSERIAL_INCLUDE_DIRECTORIES
    "${CMAKE_CURRENT_SOURCE_DIR}/include/"
    PARENT_SCOPE
)

add_library(${PROJECT_NAME} INTERFACE)
target_include_directories(${PROJECT_NAME} INTERFACE ${LIBSERIAL_INCLUDE_DIRECTORIES})
